# venn_backend

./: README.md  api.py  pyproject.toml  sqlite3.db
vennapp/: business_logic.py  import_db.py  model.py
